k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: distributed-transactions
spec:
  selector:
    app: payment
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: distributed-transactions
spec:
  selector:
    app: inventory
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: distributed-transactions
spec:
  selector:
    app: delivery
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: distributed-transactions
spec:
  selector:
    app: order
  ports:
    - port: 8000
      targetPort: 8000
